--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,19 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.container {
+  background-image: url('https://clueless.gitee.io/shangqiuimages/merchant/loginRegist/index_bg.png');
+  background-size: 100% 100%;
+}
+.index-tips {
+  position: absolute;
+  width: 70rpx;
+  height: 48rpx;
+  right: -70rpx;
+  top: 0;
+  line-height: 40rpx;
+  background-image: url('https://clueless.gitee.io/shangqiuimages/merchant/loginRegist/tips_bg.png');
+  background-size: 100% 100%;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+.btn-box {
+  width: 100%;
 }
