--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -1,43 +1,6 @@
 /* pages/login/login.wxss */
-/* 使用验证码 */
-.login-box {
-  background: url('https://clueless.gitee.io/shangqiuimages/merchant/login_bg.png') no-repeat;
-  background-size: cover;
-}
-.login-box .input-phone {
-  padding-left: 155rpx;
-}
-.login-box .input-left {
-  position: absolute;
-  left: 30rpx;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.login-box .input-left::after {
-  content: '';
-  position: absolute;
-  right: -10rpx;
-  top: 0;
-  width: 1px;
-  height: 100%;
-  background-color: #70757a;
-}
-.login-box .code-box .count-down {
-  position: absolute;
-  top:2px;
-  right: 2px;
-  height: 72rpx;
-  width: 72rpx;
-  z-index: 10;
-  line-height: 72rpx;
-  background-color: #bdc5cb;
-}
-.login-box .code-box .count-down:active {
-  background-color: #adaeaf;
-}
 
-
-/* 选择其他登录方式 */
-.other-login {
-  padding: 30rpx 30rpx 94rpx;
+.form {
+  padding: 100rpx;
+  margin-bottom: 80rpx;
 }
