--- a/app.wxss
+++ b/app.wxss
@@ -12,15 +12,23 @@ image {
   height: auto;
 }
 
+.clearfix::after {
+  content: '';
+  display: block;
+  clear: both;
+  visibility: hidden;
+  height: 0;
+}
+
 page {
   height: 100%;
 }
 
 .container {
-  height: 100%;
-  /* display: flex;
+  min-height: 100%;
+  display: flex;
   flex-direction: column;
-  box-sizing: border-box; */
+  box-sizing: border-box;
   font-size: 28rpx;
 }
 
